--- a/ejemploFonts.html
+++ b/ejemploFonts.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>La nacion</title>
-	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="type.css">
 </head>
 <body>
 <header>
