--- a/PaginaWebTarea.html
+++ b/PaginaWebTarea.html
@@ -2,39 +2,105 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Deportes</title>
+	<title>Tecnológias 2017</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="type.css">
 </head>
 <body>
 <header>
 	<nav></nav>
-	<h1>El sitio web mas visitado en las ultimas horas</h1>
+	<h1>Tendencias tecnológicas para el 2017.</h1>
 </header>
 <aside>
 	<nav></nav>
-	<h4>Deportes</h4>
-	<p>El leon ruge en la catedral</p>
-	<p>Pperdio San Carlos como siempre</p>
-	<p>Heriedia eterno segundon</p>
+	</p>
+	<ul>
+		<li class="tecnológicas">
+			Ciberseguridad.
+		</li>
+		<li class="tecnológicas">
+			Drones.
+		</li>
+		<li class="tecnológicas">
+			Inteligencia artificial.
+		</li>
+		<li class="tecnológicas">
+			Moviles.
+		</li>
+		<li class="tecnológicas">
+			Portátiles.
+		</li>
+		<li class="tecnológicas">
+			Redes sociales.
+		</li>
+		<li class="tecnológicas">
+			Realidad Virtual.
+		</li>
+	</ul>
 </aside>
 <section>
-	<h3>Sucesos</h3>
+	<h3>Tecnológias.</h3>
 	<article>
-		<h4 class="texto_articulo">Un leñador corto un arbol y este le cayo encima.</h4>
-		<p>Su perro trato de ayudarlo pero este se fue por el barranco y quedo atrapado</p>
-		<br>
-		<p>Mientras su esposa cocinaba una diliciosa sopa de mondongo</p>
+		<h4 class="titulo_articulo">Más atención a la ciberseguridad</h4>
+		<p>
+			Puesto que en 2016 ha habido un montón de <em><u>"hackeos masivos"</u></em> y que todo el mundo ha tenido en cuenta, no solo los expertos en seguridad, es evidente que la ciberseguridad va a ser un tema trascendental para 2017 que estará en boca de todos y que determinará una parte de la estrategia empresarial de varios <em><strong>gigantes tecnológicas</strong></em>.
+		</p>
+
 	</article>
 
 	<article>
-		<h4 class="texto_articulo">Su cumpleaños fue el domingo, y de regalo su equipo le regalo una victoria</h4>
-		<br>
-		<p><u>El sabado anterior le regalaron un par de medias y chocolates, pero el mejor regralo fue el domingo</u></p>
+		<h4 class="titulo_articulo">La 'guerra' de los drones</h4>
+		<p>
+			Aunque ya llevan años comercializándose a nivel de usuario para <em>grabar vídeos o simplemente para los fans de los vehículos por radiocontrol</em>, ahora los drones van a emplearse para un montón de cosas más, si es que los organismos que regulan su uso en espacios públicos están de acuerdo con ello.
+		</p>
+
+	</article>
+
+	<article>
+		<h4 class="titulo_articulo">Inteligencia artificial hasta en la sopa</h4>
+		<p>
+			<em>"Google, Apple, Facebook, Samsung... "</em>Todas están desarrollando lo que, de momento, se denominan <strong><em>asistentes personales</em></strong> para ayudarnos en tareas cotidianas y en el uso de nuestros móviles. En realidad, lo que hay detrás son inteligencias artificiales con un potencial inmenso.
+		</p>
+
+	</article>
+
+	<article>
+		<h4 class="titulo_articulo">¿Móviles que se doblan?</h4>
+		<p>
+			Mucha gente da por hecho que los teléfonos no volverán a ser pequeños porque necesitamos cada vez pantallas más grandes, de entre 5 y 6 pulgadas en algunos casos. Es posible que, <em>si Samsung y Apple lanzan los teléfonos plegables que tienen patentados</em>, esto no sea del todo cierto
+		</p>
+
+	</article>
+
+	<article>
+		<h4 class="titulo_articulo">Las convertibles se comen a los portátiles</h4>
+		<p>
+			Nos encanta el Surface <em>Pro 4 de Microsoft</em> y pensamos que es el futuro de los ordenadores portátiles: <u>es potente, tiene una pantalla táctil y se puede usar como tablet y como ordenador</u>, dependiendo de si se le pone el teclado o no. Su hermano mayor, el <em>Surface Book</em>, es similar, aunque no ha llegado a España aún
+		</p>
+
+	</article>
+
+	<article>
+		<h4 class="titulo_articulo">Las redes sociales tendrán que cambiar</h4>
+		<p>
+			<strong><em>Facebook y Twitter</em></strong> han tenido un mal año: la primera más en cuestiones de imagen y la segunda, en todos los sentidos posibles. Entre las acusaciones de haber jugado un papel involuntario, pero trascendental, en las Elecciones de EEUU; de no actuar contra el acoso y de publicar noticias falsas a punta de pala.
+		</p>
+
+	</article>
+
+	<article>
+		<h4 class="titulo_articulo">La realidad virtual: o se asienta o muere</h4>
+		<p>
+			Pese a que <strong><em>HTC Vive, Oculus Rift y PlayStation VR</em></strong> se han lanzado en 2016, parece que la tecnología de realidad virtual no termina de asentarse. Pese a que uSamsung ya había conseguido popularlizarla un mínimo entre dispositivos móviles y pese a la apuesta de otras grandes compañías, como Google con Daydream, parece que tendremos que <em>esperar a 2017 para ver qué ocurre en este panorama</em>.
+		</p>
+
 	</article>
 </section>
 <footer>
-	<p><strong>@La nacion</strong>Derechos Reservados</p>
+	<p><strong>@Tecnológias 2017</strong>Derechos Reservados</p>
 </footer>
 </body>
 </html>
